cloudformation/A4.yaml
AWSTemplateFormatVersion: "2010-09-09"
Description: ReadSmart Phase 4 - Unique Private ASG + ALB + RDS with S3 Deployment

Parameters:
  VpcId:
    Type: String
    Default: vpc-0e4b70ee419b02aa8

  PublicSubnets:
    Type: List<String>
    Default: subnet-05f18311f0dcc1a52,subnet-098d61df3062e2d28

  PrivateAppSubnets:
    Type: List<String>
    Default: subnet-0c829a72007776433,subnet-0ba3cd90c9bd66feb

  RDSSubnets:
    Type: List<String>
    Default: subnet-0ba3cd90c9bd66feb,subnet-077fef83212d222a2,subnet-0fbfbc47436df57a3,subnet-0ff5a71ee20ba3b95,subnet-03bebb63f33245af8

  KeyPairName:
    Type: String
    Default: Assignment4

  DBUsername:
    Type: String
    Default: rsadminp4
    NoEcho: true

  DBPassword:
    Type: String
    NoEcho: true
    Default: ReadSmart9A
    MinLength: 8
    AllowedPattern: '^(?=.*[a-z])(?=.*[A-Z])(?=.*[0-9]).*$'

  BookGenre:
    Type: String
    Default: Fiction
    Description: Book genre supported by ReadSmart

Resources:

  #################################
  # IAM
  #################################
  RsP4EC2Role2026:
    Type: AWS::IAM::Role
    Properties:
      RoleName: rs-p4-ec2-role-2026
      AssumeRolePolicyDocument:
        Version: "2012-10-17"
        Statement:
          - Effect: Allow
            Principal:
              Service: ec2.amazonaws.com
            Action: sts:AssumeRole
      ManagedPolicyArns:
        - arn:aws:iam::aws:policy/AmazonS3ReadOnlyAccess
        - arn:aws:iam::aws:policy/AmazonSSMManagedInstanceCore

  RsP4EC2Profile2026:
    Type: AWS::IAM::InstanceProfile
    Properties:
      InstanceProfileName: rs-p4-ec2-profile-2026
      Roles:
        - !Ref RsP4EC2Role2026

  #################################
  # SECURITY GROUPS
  #################################
  RsP4BastionSG2026:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: rs-p4-bastion-sg
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          CidrIp: 139.135.32.229/32

  RsP4AlbSG2026:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: rs-p4-alb-sg
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          CidrIp: 0.0.0.0/0

  RsP4AppSG2026:
    Type: AWS::EC2::SecurityGroup
    Properties:
      GroupDescription: rs-p4-app-sg
      VpcId: !Ref VpcId
      SecurityGroupIngress:
        - IpProtocol: tcp
          FromPort: 22
          ToPort: 22
          SourceSecurityGroupId: !Ref RsP4BastionSG2026
        - IpProtocol: tcp
          FromPort: 80
          ToPort: 80
          SourceSecurityGroupId: !Ref RsP4AlbSG2026

  #################################
  # ALB
  #################################
  RsP4Alb2026:
    Type: AWS::ElasticLoadBalancingV2::LoadBalancer
    Properties:
      Name: rs-p4-alb-2026
      Scheme: internet-facing
      Type: application
      Subnets: !Ref PublicSubnets
      SecurityGroups:
        - !Ref RsP4AlbSG2026

  RsP4TargetGroup2026:
    Type: AWS::ElasticLoadBalancingV2::TargetGroup
    Properties:
      Name: rs-p4-tg-2026
      Port: 80
      Protocol: HTTP
      VpcId: !Ref VpcId
      HealthCheckPath: /
      TargetType: instance

  RsP4Listener2026:
    Type: AWS::ElasticLoadBalancingV2::Listener
    Properties:
      LoadBalancerArn: !Ref RsP4Alb2026
      Port: 80
      Protocol: HTTP
      DefaultActions:
        - Type: forward
          TargetGroupArn: !Ref RsP4TargetGroup2026

  #################################
  # LAUNCH TEMPLATE + ASG
  #################################
  RsP4LaunchTemplate2026:
    Type: AWS::EC2::LaunchTemplate
    Properties:
      LaunchTemplateName: rs-p4-lt-2026
      LaunchTemplateData:
        IamInstanceProfile:
          Name: !Ref RsP4EC2Profile2026
        ImageId: ami-08b45cbecc38c90e1
        InstanceType: t3.micro
        KeyName: !Ref KeyPairName
        SecurityGroupIds:
          - !Ref RsP4AppSG2026
        UserData:
          Fn::Base64: !Sub |
            #!/bin/bash
            yum install -y httpd php awscli
            systemctl start httpd
            systemctl enable httpd
        
            echo "BOOK_GENRE=${BookGenre}" >> /etc/environment
        
            aws s3 cp s3://readsmart-static-site/ /var/www/html/ --recursive


  RsP4ASG2026:
    Type: AWS::AutoScaling::AutoScalingGroup
    Properties:
      AutoScalingGroupName: rs-p4-asg-2026
      LaunchTemplate:
        LaunchTemplateId: !Ref RsP4LaunchTemplate2026
        Version: "1"
      MinSize: "1"
      MaxSize: "3"
      DesiredCapacity: "1"
      VPCZoneIdentifier: !Ref PrivateAppSubnets
      TargetGroupARNs:
        - !Ref RsP4TargetGroup2026
      HealthCheckType: ELB
      HealthCheckGracePeriod: 300

  #################################
  # RDS
  #################################
  RsP4DBSubnetGroup2026:
    Type: AWS::RDS::DBSubnetGroup
    Properties:
      DBSubnetGroupDescription: rs-p4-db-subnet-2026
      SubnetIds: !Ref RDSSubnets

  RsP4RDS2026:
    Type: AWS::RDS::DBInstance
    Properties:
      DBInstanceIdentifier: rs-p4-db-2026-unique
      Engine: mysql
      DBInstanceClass: db.t4g.micro
      AllocatedStorage: 20
      PubliclyAccessible: false
      MasterUsername: !Ref DBUsername
      MasterUserPassword: !Ref DBPassword
      VPCSecurityGroups:
        - !Ref RsP4AppSG2026
      DBSubnetGroupName: !Ref RsP4DBSubnetGroup2026
      BackupRetentionPeriod: 0
      MultiAZ: false

Outputs:
  ALBDNS:
    Description: Phase 4 ALB URL
    Value: !GetAtt RsP4Alb2026.DNSName
